[package]

name    = "free"
version = "0.0.0"
authors = [ "Darin Morrison <darinmorrison+epsilonz@gmail.com>" ]

[dependencies.free_macros]
path = "./macros"

[dev-dependencies.num]
git = "https://github.com/rust-lang/num"

[dev-dependencies.quickcheck]
git = "https://github.com/BurntSushi/quickcheck"

[dev-dependencies.quickcheck_macros]
git = "https://github.com/BurntSushi/quickcheck"
